# IDH-index

./: .Dockerignore  .gitignore  404.html  Dockerfile  IDH.py  README.md  app.py  dev.ipynb  dev.py  dev2.py  docker-compose.yaml  docker-compose.yml  dummy.ipynb  environment.yaml  environment.yml  graphs.py  index.html  main.py  mkdocs.yml  models.py  pyproject.toml  readme.md  requirements.txt  research.ipynb  shell.nix  terminal.py  todo.md
Data/: pnb.csv
about/: index.html
docs/: Makefile  conf.py  index.rst  make.bat
migrations/: env.py
migrations/versions/: 7460a4ebe363_added_hincp_column.py  83f2e27a02ee_initial_migrations.py  8ad69fa61d1f_initial_migrations.py  ea0855ed74dd_added_gnitable_and_rename.py
notebooks/: api.qmd  dev.ipynb  dev.qmd  duckdb.qmd  ouslan-adjust-edu.ipynb  ouslan-graph.ipynb  ouslan-polars.ipynb  process.qmd  pull_gni.qmd  test.ipynb
src/: models.py
src/data/: IDH.py  data_process.py  data_pull.py  fetch.py
src/visualization/: visualize.py
